# TradingPlatform

./: .env  .env.example  .gitignore  BASELINE_MANIFEST.md  CURRENT_STATUS.md  FINAL_PROJECT_CLOSURE.md  INITIAL_SETUP.md  INSTALL.md  INSTALL_M34_PHASE5_STEP1.md  INSTALL_M34_PHASE5_STEP2.md  INSTALL_M34_PHASE5_STEP3.md  INSTALL_M34_PHASE5_STEP4.md  INSTALL_M34_PHASE5_STEP5.md  LOCAL_MAC_SETUP.md  M35_WORKFLOW_LOCK.md  MILESTONE34_COMPLETION_REPORT.md  PATCH_EXISTING_UI_APP.md  PHASE4_COMPLETION_REPORT.md  PROJECT_STATUS.md  PROJECT_STATUS.md_0  PROJECT_STATUS.md_original  PROJECT_STATUS_M31_PHASE10_CORRECTION.md  PROJECT_STATUS_M31_PHASE10_UPDATE.md  PROJECT_STATUS_M31_PHASE5_UPDATE.md  PROJECT_STATUS_M31_PHASE6_UPDATE.md  PROJECT_STATUS_M31_PHASE7_UPDATE.md  PROJECT_STATUS_M31_PHASE8_UPDATE.md  PROJECT_STATUS_M31_PHASE9_UPDATE.md  PROJECT_STATUS_M32_PHASE1_UPDATE.md  PROJECT_STATUS_M32_PHASE2_UPDATE.md  PROJECT_STATUS_M32_PHASE3_UPDATE.md  PROJECT_STATUS_M32_PHASE4_UPDATE.md  PROJECT_STATUS_M32_PHASE5_UPDATE.md  PROJECT_STATUS_M33_PHASE10_1_UPDATE.md  PROJECT_STATUS_M33_PHASE10_UPDATE.md  PROJECT_STATUS_M33_PHASE1_UPDATE.md  PROJECT_STATUS_M33_PHASE2_UPDATE.md  PROJECT_STATUS_M33_PHASE3_UPDATE.md  PROJECT_STATUS_M33_PHASE4_UPDATE.md  PROJECT_STATUS_M33_PHASE5_UPDATE.md  (+54 more)
archive/: init_db.py  main.py  pyproject.toml  pyproject.toml_backup  requirements.txt  test_download.py
archive/config/: config.yaml  universe.yaml
archive/tests/: test_imports.py
archive/tests/unit/: test_settings.py
canonical_universe_followup_fix_20260720/: INSTALL.md
config/: alert_rules.json  broker.json  broker_execution.json  broker_operational_reporting.json  broker_order_validation.json  broker_reconciliation.json  compliance_controls.json  continuous_monitoring.json  deployment_automation_policy.json  deployment_policy.json  deployment_targets.json  disaster_recovery.json  dynamic_risk_limits.json  environment_profiles.json  environment_registry.json  feed_monitor.json  final_readiness_policy.json  final_signoff.json  instrument_mapping.json  (+48 more)
(+4646 files in other folders)
