[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-ai"
version = "0.1.0"
description = "AI Powered Options Trading Platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "sqlalchemy>=2.0",
  "psycopg2-binary",
  "python-dotenv",
  "pydantic>=2.0",
  "pydantic-settings",
  "loguru",
  "requests",
  "httpx",
  "yfinance",
  "polygon-api-client>=1.16.3",
  "plotly",
  "streamlit",
  "ta",
  "apscheduler",
  "redis",
  "xgboost",
  "scikit-learn",
  "alembic",
  "matplotlib>=3.11.0",
  "certifi>=2025.11.12",
]

[project.scripts]
trading-ai = "trading_ai.__main__:main"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.mypy]
python_version = "3.13"

[dependency-groups]
dev = [
  "black>=26.5.1",
  "mypy>=2.1.0",
  "pytest>=9.1.1",
  "ruff>=0.15.20",
]
